--- a/.github/workflows/docker-image-alpine.yml
+++ b/.github/workflows/docker-image-alpine.yml
@@ -25,8 +25,9 @@ jobs:
       run: echo "${{ secrets.ACCESS_TOKEN }}" | docker login -u $DOCKER_HUB_USER --password-stdin
     - name: Push image
       run: |
-        # test now pwd
+        # now pwd
         echo $PWD
+        cd $IMAGE_BUILD_OS_PATH
 
         # parse docker image id
         IMAGE_ID=$DOCKER_HUB_USER/$IMAGE_NAME
