feat: let verdaccio tag version to 5.1.2

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -11,8 +11,10 @@ FROM verdaccio/verdaccio:5.1.2
 
 USER root
 
-RUN npm i && \
- npm i verdaccio-gitea-auth && \
- npm cache clean --force
+RUN yarn add verdaccio-gitea-auth && \
+  yarn install && \
+  yarn code:docker-build && \
+  yarn cache clean && \
+  yarn workspaces focus --production
 
 USER verdaccio
