ci(action): change platform of docker build

--- a/.github/workflows/docker-image-latest.yml
+++ b/.github/workflows/docker-image-latest.yml
@@ -30,7 +30,7 @@ on:
         required: false
 
 env:
-  DOCKER_IMAGE_PLATFORMS: linux/amd64,linux/arm64/v8 # change to your platforms for release
+  DOCKER_IMAGE_PLATFORMS: linux/amd64,linux/arm64 # change to your platforms for release
 #  DOCKER_IMAGE_PLATFORMS: linux/amd64,linux/386,linux/arm64/v8,linux/arm/v7
 
 jobs:
@@ -41,7 +41,7 @@ jobs:
         docker_image: # change this for build dry-run
           - platform: linux/amd64
           # - platform: linux/386
-          - platform: linux/arm64/v8
+          - platform: linux/arm64
           # - platform: linux/arm/v7
     runs-on: ${{ matrix.os }}
     steps:
