feat: try new version of v5.22.1
verdaccion version to v5.22.1

BREAKING CHANGE: Since v5.22.0 the logger property is renamed from logs to log, it is still backward
compatible but displaying a warning

--- a/conf/docker.yaml
+++ b/conf/docker.yaml
@@ -183,7 +183,7 @@ middlewares:
 
 # https://verdaccio.org/docs/logger
 # log settings
-logs: { type: stdout, format: pretty, level: http }
+log: { type: stdout, format: pretty, level: http }
 #experiments:
 #  # support for npm token command
 #  token: false
