--- a/.github/workflows-template/docker-image-latest.yml
+++ b/.github/workflows-template/docker-image-latest.yml
@@ -1,44 +1,121 @@
-name: Docker Image CI latest
+# this is a workflow must has secrets
+# - DOCKERHUB_OWNER
+# - DOCKERHUB_REPO_NAME
+# - DOCKERHUB_TOKEN
+# most use as github.event.pull_request.merged == true
+name: docker-image-latest
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_call: # https://docs.github.com/actions/using-workflows/reusing-workflows#using-inputs-and-secrets-in-a-reusable-workflow
+    inputs:
+      push_remote_flag:
+        description: 'flag for push to remote'
+        default: false
+        required: false
+        type: boolean
+      build_branch_name:
+        description: 'name of branch for build default is main'
+        default: 'main'
+        required: false
+        type: string
+    secrets:
+      DOCKERHUB_OWNER:
+        description: 'docker hub owner'
+        required: true
+      DOCKERHUB_REPO_NAME:
+        description: 'docker hub registry name'
+        required: true
+      DOCKERHUB_TOKEN:
+        description: 'docker hub token'
+        required: false
 
 env:
-  # nmae of docker image
-  DOCKER_HUB_USER: sinlov
-  IMAGE_NAME: docker-verdaccio-gitea-auth
+  DOCKER_IMAGE_PLATFORMS: linux/amd64,linux/arm64 # change to your platforms for release
+#  DOCKER_IMAGE_PLATFORMS: linux/amd64,linux/386,linux/arm64/v8,linux/arm/v7
 
 jobs:
-
-  build:
-
-    runs-on: ubuntu-latest
+  docker-image-buildx:
+    strategy:
+      matrix:
+        os: [ ubuntu-latest ]
+        docker_image: # change this for build dry-run
+          - platform: linux/amd64
+          # - platform: linux/386
+          - platform: linux/arm64
+          # - platform: linux/arm/v7
+    runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $IMAGE_NAME
-    - name: Log into registry
-      run: echo "${{ secrets.ACCESS_TOKEN }}" | docker login -u $DOCKER_HUB_USER --password-stdin
-    - name: Push image
-      run: |
-        # parse docker image id
-        IMAGE_ID=$DOCKER_HUB_USER/$IMAGE_NAME
-        # lower case all
-        IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-        # ref get version
-        VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-        # replace v chat at tag
-        [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-        # Use Docker `latest` tag convention when get main
-        [ "$VERSION" == "main" ] && VERSION=latest
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ secrets.DOCKERHUB_OWNER }}/${{ secrets.DOCKERHUB_REPO_NAME }}
+          tags: |
+            # set latest tag for main branch https://github.com/docker/metadata-action#latest-tag
+            type=raw,value=latest,enable=true
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-        echo IMAGE_ID=$IMAGE_ID
-        echo VERSION=$VERSION
-        # seting tag
-        docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Build dry
+        uses: docker/build-push-action@v5 # https://github.com/docker/build-push-action
+        with:
+          context: .
+          file: Dockerfile
+          platforms: ${{ matrix.docker_image.platform }}
+          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
+          no-cache: false
+          pull: true
+          push: false
 
-        # docker push
-        docker push $IMAGE_ID:$VERSION
+  docker-image-push:
+    runs-on: ubuntu-latest
+    needs:
+      - docker-image-buildx
+    if: ${{ inputs.push_remote_flag }}
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ secrets.DOCKERHUB_OWNER }}/${{ secrets.DOCKERHUB_REPO_NAME }}
+          tags: |
+            # type semver https://github.com/docker/metadata-action#typesemver
+            type=raw,value=latest,enable=true
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: "Login into registry as user"
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_OWNER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Build and push
+        id: docker_push
+        uses: docker/build-push-action@v5 # https://github.com/docker/build-push-action
+        with:
+          context: .
+          file: Dockerfile
+          platforms: ${{ env.DOCKER_IMAGE_PLATFORMS }}
+          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
+          no-cache: false
+          pull: true
+          push: true
