feat: update verdaccio to v6.0.1 and node to 20.18.0
feat #9

- Update verdaccio version from 5.32.2 to 6.0.1
- Update node version from 20.16.0 to 20.18.0
- Update Dockerfile and Makefile accordingly
- Add migration guide in README.md

--- a/dist-docker/v6/Dockerfile
+++ b/dist-docker/v6/Dockerfile
@@ -1,16 +1,4 @@
-# This dockerfile uses extends image https://hub.docker.com/sinlov/go-micro-cli
-# VERSION 1
-# Author: sinlov
-# dockerfile offical document https://docs.docker.com/engine/reference/builder/
-# https://hub.docker.com/_/node?tab=tags&page=1&ordering=last_updated&name=15.12.0-alpine
-
-# maintainer="https://github.com/sinlov/docker-verdaccio-gitea-auth"
-
-# https://github.com/verdaccio/verdaccio/blob/v6.0.1/Dockerfile
-# FROM --platform=${BUILDPLATFORM:-linux/amd64} node:20.18.0-alpine as builder
-FROM node:20.18.0-alpine as builder
-
-ARG VERDACCIO_DIST_VERSION=6.0.1
+FROM --platform=${BUILDPLATFORM:-linux/amd64} node:20.18.0-alpine as builder
 
 ENV NODE_ENV=production \
     VERDACCIO_BUILD_REGISTRY=https://registry.npmjs.org  \
@@ -19,15 +7,14 @@ ENV NODE_ENV=production \
     HUSKY_DEBUG=1
 
 RUN apk add --force-overwrite && \
-    apk --no-cache add openssl ca-certificates wget git && \
+    apk --no-cache add openssl ca-certificates wget && \
     apk --no-cache add g++ gcc libgcc libstdc++ linux-headers make python3 && \
     wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub && \
     wget -q https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.35-r0/glibc-2.35-r0.apk && \
     apk add --force-overwrite glibc-2.35-r0.apk
 
 WORKDIR /opt/verdaccio-build
-
-RUN git clone https://github.com/verdaccio/verdaccio.git --depth=1 -b v${VERDACCIO_DIST_VERSION} /opt/verdaccio-build
+COPY . .
 
 ## build the project and create a tarball of the project for later
 ## global installation
@@ -35,8 +22,6 @@ RUN yarn config set npmRegistryServer $VERDACCIO_BUILD_REGISTRY && \
     yarn config set enableProgressBars true && \
     yarn config set enableScripts false && \
     yarn install --immutable && \
-    yarn add verdaccio-gitea-auth && \
-    yarn add verdaccio-hello && \
     yarn build
 ## pack the project
 RUN yarn pack --out verdaccio.tgz \
@@ -46,7 +31,7 @@ RUN yarn pack --out verdaccio.tgz \
 RUN rm -Rf /opt/verdaccio-build
 
 FROM node:20.18.0-alpine
-LABEL maintainer="https://github.com/sinlov/docker-verdaccio-gitea-auth"
+LABEL maintainer="https://github.com/verdaccio/verdaccio"
 
 ENV VERDACCIO_APPDIR=/opt/verdaccio \
     VERDACCIO_USER_NAME=verdaccio \
